--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,3 +43,4 @@ jobs:
           SNOWSQL_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
         run: |
           ~/bin/snowsql -q "SELECT CURRENT_VERSION();"
+          ~/bin/snowsql -q "ALTER GIT REPOSITORY CI_CD_DEMO.DEMO_SCHEMA.snowflake_extensions FETCH;"
