--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,3 +44,4 @@ jobs:
         run: |
           ~/bin/snowsql -q "SELECT CURRENT_VERSION();"
           ~/bin/snowsql -q "ALTER GIT REPOSITORY CI_CD_DEMO.DEMO_SCHEMA.snowflake_extensions FETCH;"
+          ~/bin/snowsql -q "EXECUTE IMMEDIATE FROM @snowflake_extensions/branches/main/SQL_SCRIPT.SQL;"
