--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,8 +15,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          # Ensure the full commit history is fetched
-          fetch-depth: 0  # Fetch all history, so git diff can work correctly
+          # Ensure we fetch all commit history and work in the correct branch
+          fetch-depth: 0  # Fetch full commit history
 
       - name: Install SnowSQL
         run: |
@@ -41,14 +41,17 @@ jobs:
             git ls-tree --name-only --full-tree HEAD > modified_files.txt
           fi
           
-          # Filter only SQL files, and ensure the script continues if no SQL files are found
+          # Debug: Show all modified files, regardless of type
+          echo "Modified files:"
+          cat modified_files.txt
+
+          # Filter only SQL files, and ensure the script continues even if no SQL files are found
           grep '\.sql$' modified_files.txt > sql_files.txt || true
           
-          # Show the modified SQL files (if any)
+          # Debug: Show filtered SQL files
           if [ -s sql_files.txt ]; then
             echo "Modified SQL files:"
             cat sql_files.txt
           else
             echo "No SQL files modified."
           fi
-
