--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -55,3 +55,21 @@ jobs:
           else
             echo "No SQL files modified."
           fi
+
+      - name: Run SnowSQL Command
+        env:
+          SNOWSQL_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
+          SNOWSQL_USER: ${{ secrets.SNOWFLAKE_USER }}
+          SNOWSQL_PWD: ${{ secrets.SNOWFLAKE_PASSWORD }}
+          SNOWSQL_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
+          SNOWSQL_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
+        run: |
+          ~/bin/snowsql -q "ALTER GIT REPOSITORY CI_CD_DEMO.DEMO_SCHEMA.snowflake_extensions FETCH;"
+          for file in $(cat sql_files.txt); do
+            echo "Running $file"
+            ~/bin/snowsql -q "
+              USE DATABASE CI_CD_DEMO;
+              USE SCHEMA DEMO_SCHEMA;
+              EXECUTE IMMEDIATE FROM @snowflake_extensions/branches/main/$file;"
+          done
+          
