--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -56,6 +56,12 @@ jobs:
             echo "No SQL files modified."
           fi
 
+      - name: Debug SQL files and SnowSQL Command
+        run: |
+          # Print SQL files for debugging
+          echo "SQL files to execute:"
+          cat sql_files.txt
+
       - name: Run SnowSQL Command
         env:
           SNOWSQL_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
@@ -64,12 +70,14 @@ jobs:
           SNOWSQL_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
           SNOWSQL_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
         run: |
+          set -e  # Exit on error
           ~/bin/snowsql -q "ALTER GIT REPOSITORY CI_CD_DEMO.DEMO_SCHEMA.snowflake_extensions FETCH;"
-          for file in $(cat sql_files.txt); do
-            echo "Running $file"
+          
+          while IFS= read -r file; do
+            echo "Running SQL file: $file"
             ~/bin/snowsql -q "
               USE DATABASE CI_CD_DEMO;
               USE SCHEMA DEMO_SCHEMA;
               EXECUTE IMMEDIATE FROM @snowflake_extensions/branches/main/$file;"
-          done
+          done < sql_files.txt
           
