--- a/.github/workflows/CI_CD_PIPELINE.yml
+++ b/.github/workflows/CI_CD_PIPELINE.yml
@@ -27,17 +27,16 @@ jobs:
       - name: Get the list of modified SQL scripts
         id: modified_files
         run: |
+          # Fetch modified files
           if git rev-parse HEAD~1 >/dev/null 2>&1; then
-            echo "Fetching modified files between HEAD and previous commit..."
             git diff --name-only HEAD~1 HEAD > modified_files.txt
           else
-            echo "No previous commit. Fetching all committed files in the current commit..."
             git ls-tree --name-only --full-tree HEAD > modified_files.txt
           fi
           
+          # Show modified files and filter for SQL files
           echo "Modified files:"
           cat modified_files.txt
-
           grep -i '\.sql$' modified_files.txt > sql_files.txt || true
 
           if [ -s sql_files.txt ]; then
@@ -45,15 +44,6 @@ jobs:
             cat sql_files.txt
           else
             echo "No SQL files modified."
-          fi
-
-      - name: Debug SQL files
-        run: |
-          echo "SQL files to execute:"
-          if [ -f sql_files.txt ]; then
-            cat sql_files.txt || echo "sql_files.txt is empty."
-          else
-            echo "sql_files.txt does not exist."
           fi
 
       - name: Run SnowSQL Command
@@ -64,39 +54,34 @@ jobs:
           SNOWSQL_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
           SNOWSQL_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
         run: |
-          set +e  # Do not exit immediately on error
+          set -e  # Exit on error
 
           # Fetch latest from Snowflake repository
           ~/bin/snowsql -q "ALTER GIT REPOSITORY CI_CD_DEMO.DEMO_SCHEMA.snowflake_extensions FETCH;"
 
-          # Check if sql_files.txt is not empty before proceeding
           if [ -s sql_files.txt ]; then
-            # Loop through the SQL files and execute
             while IFS= read -r file; do
               echo "Running SQL file: $file"
 
-              # Attempt to run the current SQL file
+              # Run the current SQL file
               if ! ~/bin/snowsql -q "
                 USE DATABASE CI_CD_DEMO;
                 USE SCHEMA DEMO_SCHEMA;
                 EXECUTE IMMEDIATE FROM @snowflake_extensions/branches/main/$file;"; then
+                
+                # If the current script fails, run the previous version
                 echo "Failed to run $file. Attempting to run previous version of the script."
-
-                # Get the previous version of the SQL file
+                
                 previous_file="branches/main/$(git rev-parse HEAD~1):$file"
-
-                # Attempt to run the previous version of the SQL file
                 if ~/bin/snowsql -q "
                   USE DATABASE CI_CD_DEMO;
                   USE SCHEMA DEMO_SCHEMA;
                   EXECUTE IMMEDIATE FROM @snowflake_extensions/${previous_file};"; then
                   echo "Successfully ran previous version of $file."
                 else
-                  echo "Failed to run previous version of $file."
+                  echo "Failed to run previous version of $file. Exiting."
+                  exit 1
                 fi
-
-                # Continue to the next file in the loop
-                continue
               fi
             done < sql_files.txt
           else
